
30. New: support for in, out and in out parameters in user-defined functions and procedures.  Supports scalar and aggregate types. [unset needs updating]

31. Fix: shell command no longer errors after a begin.

32. Fix: mysql parser no longer has errors when compiling with --without-mysql.

33. Fix: records are no longer treated as unused when only fields of the record are referenced.

34. Fix: using an array index on a scalar variable no longer raises a storage error.

35. Fix: using an undefined element type in an array declaration no longers leaves a half-declared variable.

36. Fix: using an assignment in an array declaration now has a custom error and no longer leaves a half-declared variable.

37. Fix: additional dup2 EINTR checks in shell pipeline execution added to hopefully eliminate (or reduce) intermittent interrupted system call errors.

38. Fix: declarations using record subtypes now working, but not fully tested.  Creating a derived type from a record is now a "not implemented" error.

39. New: GNU readline now the default command line input function.  The old Ada function can be used if you use the new configure flag --without-readline.

40. Change: pragma import / import_json rejects imports to predefined types (or subtypes).  Type assume the user will want a different type to mark data as unvalidated/untrusted (at a minimum) and the value will need to go through a validation subprogram before use.  unchecked_import does not have this restriction.

41. New: Raspberry Pi 3 support in configuration file.

42. Fix: help produces help for scripts again (misspelled annotate).

43. Fix: if no template type is specified, HTML is assumed for compatibility with older versions of SparForte.

44. Fix: pragma test_result now works with templates.

45. Change: internal errors in world package now raise exceptions instead of printing a message to standard error.

46. Change: some errors rewritten to use err() to improve chances of displaying in a template.
